--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ahoteshanul Haque Shah - Technical Project Manager</title>
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>👨‍💼</text></svg>">
+    <link rel="icon" type="image/png" href="assets/notion.png">
     <style>
         /* ========================================
            GLOBAL RESET & BASE STYLES
